--- a/amigurumi-app/src/app/core/header/header.component.css
+++ b/amigurumi-app/src/app/core/header/header.component.css
@@ -3,33 +3,47 @@ header {
     background: linear-gradient(0deg, rgba(0, 128, 182, 1) 0%, rgba(0, 128, 182, 1) 35%, rgba(0, 212, 255, 1) 100%); 
      */
     background: rgb(87, 88, 187);
-    background: linear-gradient(0deg, rgba(87, 88, 187, 1) 38%, rgba(217, 128, 250, 1) 95%);
+    background: linear-gradient(0deg, rgba(87, 88, 187, 1) 38%,
+     rgba(217, 128, 250, 1) 95%);
     /* background: rgb(189,220,215);
     background: linear-gradient(0deg, rgba(189,220,215,1) 44%, rgba(253,182,186,1) 86%); */
     /* background: rgb(189,220,215);
     background: linear-gradient(153deg, rgba(189,220,215,1) 0%, rgba(97,191,190,1) 34%, rgba(253,182,186,1) 93%); */
+    display: flex;
+    justify-content:space-between;
 }
 
 header ul {
     padding: 0;
     display: flex;
     align-items: center;
-    width: 75%;
+    justify-content: flex-end;
+    /* width: 75%; */
     margin: auto;
 }
-
+.welcome{
+    padding: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    /* width: 75%; */
+    margin: auto;   
+}
 
 .mini-navbar ul {
     border: 1px solid #00d4ff;
     border-radius: 0.3em;
     padding-left: 0;
     width: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 header li {
     list-style: none;
     /* margin: .35em; */
-    padding: .35em 1em;
+    padding: 0em 
 }
 
 header .mini-navbar ul li:hover {
@@ -102,14 +116,14 @@ nav {
     margin: 0.5em 0;
 }
 
-.mini-navbar-wrap {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 75%;
-    margin: auto;
-}
+    /* .mini-navbar-wrap {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 95%;
+        margin: auto;
+    } */
 
 
 
@@ -134,6 +148,12 @@ nav {
     overflow: hidden;
     display: flex;
     align-items: center;
+    
+}
+.sasa{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .img-wrap img {
@@ -156,4 +176,10 @@ nav {
 .img-wrap h1 {
     color: white;
     padding: 0.5em;
+}
+.nav-link{
+    color: white;
+}
+.zaza{
+    
 }
