add new components new-product

--- a/amigurumi-app/src/app/core/header/header.component.html
+++ b/amigurumi-app/src/app/core/header/header.component.html
@@ -97,7 +97,7 @@
                 aria-selected="false">Catalog</button>
         </li>
         <li class="nav-item" role="presentation" *ngIf="isLoggedIn">
-            <button routerLink="/products" class="nav-link" id="contact-tab" data-bs-toggle="tab"
+            <button routerLink="/addNewProduct" class="nav-link" id="contact-tab" data-bs-toggle="tab"
                 data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane"
                 aria-selected="false">Add new Amigurumi</button>
         </li>
