--- a/amigurumi-app/src/app/product/details-product/details-product.component.html
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.html
@@ -1,9 +1,14 @@
 <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
-
+    <div class="my-5">
+        <h3>Amigurumi Details:</h3>
+        <hr>
+    </div>
 
 <div class="row g-0 custom-bg-style position-relative">
+   
+
     <div class="col-md-6 mb-md-0 p-md-4">
         <div class="square-image-container">
             <img src="{{product.imageUrl}}" class="square-image" alt="...">
