--- a/amigurumi-app/src/app/user/profile/profile.component.html
+++ b/amigurumi-app/src/app/user/profile/profile.component.html
@@ -2,8 +2,15 @@
   <div class="main-body">
 
     <div class="row gutters-sm">
+    
+      <div class="my-5">
+        <h3>My Profile</h3>
+        <hr>
+      </div>
       <div class="col-md-4 mb-3 ">
-        <!-- READONLY MODE -->
+        
+ 
+        <!-- READ ONLY MODE -->
         <ng-container *ngIf="!isEditMode">
           <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
             <div class="card-body">
@@ -73,7 +80,8 @@
                 </ng-container>
 
                 <div class="input-group mb-3">
-                  <span class="input-group-text" id="basic-addon1">@</span>
+                  <span class="input-group-text" id="basic-addon1"><i class="fa-regular fa-envelope"></i> </span>
+                  <!-- <span class="input-group-text" id="basic-addon1">@</span> -->
                   <input type="text" class="form-control" name="email" id="email" value="{{email}}" ngModel email
                     required #emailInput="ngModel">
 
@@ -137,7 +145,7 @@
                   <button type="button" class="btn btn-outline-primary" (click)="toggleEditMode()">Cancel</button>
                   <button type="button" class="btn btn-outline-primary" (click)="saveProfileHandler(form)"
                     [disabled]="form.invalid"
-                    >Save</button>
+                    >Save changes</button>
 
                 </div>
               </div>
@@ -147,7 +155,7 @@
 
       </div>
       <div class="col-md-8">
-
+    
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <section class="container pt-3 mb-3 ">
           <div class="row pt-5 mt-30">
