--- a/amigurumi-app/src/app/product/details-product/details-product.component.html
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.html
@@ -1,13 +1,13 @@
 <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
-    <div class="my-5">
-        <h3>Amigurumi Details:</h3>
-        <hr>
-    </div>
+<div class="my-5">
+    <h3>Amigurumi Details:</h3>
+    <hr>
+</div>
 
 <div class="row g-0 custom-bg-style position-relative">
-   
+
 
     <div class="col-md-6 mb-md-0 p-md-4">
         <div class="square-image-container">
@@ -45,36 +45,156 @@
                     thumb_up
                 </span>
                 <span>{{likeButtonTitle}}</span>
+
             </button>
-            <button class="btn-comment">
+            <!-- <button class="btn-comment">
                 <span class="material-symbols-outlined">
                     rate_review
                 </span>
                 <span>Add Comment</span>
-            </button>
+            </button> -->
 
-            <button class="btn-edit">
+
+            <button type="button" class="btn-comment" data-bs-toggle="modal" data-bs-target="#exampleModalAddComment"
+                data-bs-whatever="@mdo">
+                <span class="material-symbols-outlined">
+                    rate_review
+                </span>
+                <span>Add Comment</span></button>
+
+            <!--Add Comment Button trigger modal -->
+            <div class="modal fade" id="exampleModalAddComment" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">New message</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="mb-3">
+                                    <label for="recipient-name" class="col-form-label">Recipient:</label>
+                                    <input type="text" class="form-control" id="recipient-name">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="message-text" class="col-form-label">Message:</label>
+                                    <textarea class="form-control" id="message-text"></textarea>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Send message</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <button class="btn-edit" (click)="editProduct()">
                 <span class="material-symbols-outlined">
                     edit
                 </span>
                 <span>Edit</span>
             </button>
-            <button class="btn-delete">
+
+            <!-- <button class="btn-delete" (click)="deleteProduct()">
                 <span class="material-symbols-outlined">
                     delete</span>
+                <span>Delete</span>
+            </button> -->
+            <!-- <button class="btn-delete" *ngIf="isDeleteProduct">
+                <span class="material-symbols-outlined">
+                    delete</span>
+                <span>Delete</span>
+            </button> -->
 
-
+            <!--Delete Button trigger modal -->
+            <button type="button" class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <span class="material-symbols-outlined">
+                    delete</span>
                 <span>Delete</span>
             </button>
 
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Delete</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete this product?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-outline-secondary"
+                                data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary" (click)="deleteProduct()">Yes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
+
+
         <div class="btn-back">
-            <a [routerLink]="['..']" class="btn btn-outline-light">Back</a>  
+            <a [routerLink]="['..']" class="btn btn-outline-light">Back</a>
+            <a [routerLink]="['..']" class="btn btn-outline-secondary">Back</a>
         </div>
-      
+
+        <div><span class="card-text"> No customer comments for this product!</span></div>
+
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        Accordion Item #1
+                    </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
+                        the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        Accordion Item #2
+                    </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
+                        the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine
+                        this being filled with some actual content.</div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        Accordion Item #3
+                    </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
+                        the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more
+                        exciting happening here in terms of content, but just filling up the space to make it look, at
+                        least at first glance, a bit more representative of how this would look in a real-world
+                        application.</div>
+                </div>
+            </div>
+        </div>
+
+        
     </div>
-    <div class="accordion" id="accordionExample">
+    <!-- <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -111,7 +231,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 </div>
 
 <li>
@@ -183,7 +303,7 @@
 
 
 
-        
+
     </div>
 
     <a [routerLink]="['..']" class="btn btn-outline-light">Back</a>
