--- a/amigurumi-app/src/app/home/home.component.html
+++ b/amigurumi-app/src/app/home/home.component.html
@@ -1,27 +1,65 @@
 
-<div class="page-container" >
-
-    <p>home works!</p>
-    <i class="fas fa-check"></i>
-    <i class="material-icons">check</i>
-    <i class="fa-solid fa-user"></i>
-    <i class="fa-solid fa-envelope"></i>
-    <i class="fa-solid fa-user-check fa-fade"></i>
-    <i class="fa-solid fa-user-large fa-beat-fade"></i>
-
-    <div class="col-lg-3 col-md-5 col-5 mx-lg-auto">
-        <img src="images/sharing-design-ideas-with-family.jpg" class="about-image about-image-small img-fluid" alt="">
-    </div>
-
-    <div class="col-lg-4 col-md-7 col-7">
-        <img src="images/living-room-interior-wall-mockup-warm-tones-with-leather-sofa-which-is-kitchen-3d-rendering.jpg" class="about-image img-fluid" alt="">
-    </div>
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-primary" type="submit">Search</button>
-          </form>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <!-- Page title -->
+        <div class="my-5">
+          <h1>Welcome to Amigurumi</h1>
+          
         </div>
-      </nav>
-</div>
+        <nav class="navbar bg-body-tertiary">
+          <div class="container-fluid">
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-primary" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active ">
+         
+
+            <img src="https://i.pinimg.com/564x/b8/c7/b7/b8c7b7a46dff08918260cedc31e4d66d.jpg" class="d-block divPhotos" alt="...">
+          
+          
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item bg-secondary-soft">
+          <img src="https://i.pinimg.com/564x/72/78/90/7278905829eb02c7363b83dbd68e20ec.jpg" class="d-block  divPhotos" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item bg-secondary-soft">
+          <img src="https://i.pinimg.com/564x/e1/85/b4/e185b4b8a278a53b0e7e998aec889ef2.jpg" class="d-block  divPhotos" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div> -->
+
