--- a/amigurumi-app/src/app/product-list/product-list.component.css
+++ b/amigurumi-app/src/app/product-list/product-list.component.css
@@ -1,3 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+
+
+
 ul {
     display: flex;
     flex-direction: row;
@@ -6,15 +11,6 @@ ul {
     flex-wrap: wrap;
     padding-top: 20px;
 }
-@import url('https://fonts.googleapis.com/css?family=Raleway');
-
-
-* {
-    font-family: 'Raleway',
-        sans-serif;
-    font-weight: bold;
-}
-
 li {
     display: flex;
     flex-direction: column;
@@ -94,14 +90,7 @@ button a:hover {
     color: white;
 } */
 
-.material-symbols-outlined {
-    font-size: 16px;
-    font-variation-settings:
-        'FILL' 0,
-        'wght' 18,
-        'GRAD' 0,
-        'opsz' 48
-}
+
 
 .settings {
     display: flex;
@@ -140,4 +129,13 @@ a {
     background: white;
     color: rgb(7, 7, 7);
     text-decoration: none;
+}
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
 }
