--- a/amigurumi-app/src/app/product-list/product-list.component.html
+++ b/amigurumi-app/src/app/product-list/product-list.component.html
@@ -1,45 +1,51 @@
-<div class="my-5">
-    <h3>Amigurumi Catalog:</h3>
-    <hr>
-</div>
-<ul>
-    <!-- <app-card-product *ngFor="let p of products"  [product]="p|| ''"
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <!-- Page title -->
+            <div class="my-5">
+                <h3>Amigurumi Catalog:</h3>
+                <hr>
+            </div>
+            <!-- Form START -->
+
+            <ul>
+                <!-- <app-card-product *ngFor="let p of products"  [product]="p|| ''"
         [productDesc]="p.description || ''"
      
         >
     </app-card-product> -->
-    <!-- *ngFor="let p of products"  [product]="p|| ''"
+                <!-- *ngFor="let p of products"  [product]="p|| ''"
     [productDesc]="p.description || ''" -->
 
-    <li *ngFor="let product of products ">
+                <li *ngFor="let product of products ">
 
 
-        <!-- [routerLink]="['product','detail',product.id]"> -->
-        <div class="card" style="width: 18rem;">
-            <img src="{{product.imageUrl}}" class="card-img-top" alt="product image">
-            <div class="card-body">
-                <h5 class="card-title">{{product.title}}</h5>
+                    <!-- [routerLink]="['product','detail',product.id]"> -->
+                    <div class="card" style="width: 18rem;">
+                        <img src="{{product.imageUrl}}" class="card-img-top" alt="product image">
+                        <div class="card-body">
+                            <h5 class="card-title">{{product.title}}</h5>
 
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the
+                                card's content.</p>
 
-                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
-                </footer>
+                            <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
+                                    Title</cite>
+                            </footer>
 
 
-                <button> <a [routerLink]="product.id" class="btn btn-primary"> Details Page</a></button>
+                            <button> <a [routerLink]="product.id" class="btn btn-primary"> Details Page</a></button>
 
-            </div>
+                        </div>
+                    </div>
+
+                </li>
+            </ul>
         </div>
-
-
-
-    </li>
-
-
-</ul>
-
-
+    </div>
+</div>
 <!-- <div id="title">
     <h3>{{product.title}}</h3>
 </div> -->
