--- a/amigurumi-app/src/app/product/card-product/card-product.component.css
+++ b/amigurumi-app/src/app/product/card-product/card-product.component.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
-
+/* 
 * {
     font-family: 'Raleway',
         sans-serif;
     font-weight: bold;
-}
+} */
 
 li {
     display: flex;
