--- a/amigurumi-app/src/app/product/details-product/details-product.component.css
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
-
+/* 
 * {
     font-family: 'Raleway',
         sans-serif;
     font-weight: bold;
-}
+} */
 
 li {
 
@@ -21,8 +21,8 @@ li {
     margin: 20px auto;
     /* background: #5758BB; */
     background-color: rgba(240, 240, 240, 0.8)
-    /* background: #ADADE8; */
-    /* box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; */
+        /* background: #ADADE8; */
+        /* box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; */
 }
 
 li:hover {
@@ -57,12 +57,13 @@ h3 {
 
 #title {
     /* margin-bottom: 10px; */
-    color: rgb(27, 28, 27);;
+    color: rgb(27, 28, 27);
+    ;
     border-bottom: 3px solid rgba(26, 23, 23, 0.5);
     margin: 0 auto;
     width: max-content;
     margin-bottom: 20px;
-    font-size:28px;
+    font-size: 28px;
 }
 
 
@@ -76,7 +77,7 @@ h3 {
 }
 
 
-
+/* 
 button {
     outline: none;
     border: none;
@@ -90,7 +91,7 @@ button {
 button:hover {
     background: #FDA7DF;
     color: white;
-}
+} */
 
 .material-symbols-outlined {
     font-size: 16px;
@@ -101,12 +102,13 @@ button:hover {
         'opsz' 48
 }
 
-.settings {
+.settings,
+.ownProduct {
     display: flex;
     text-align: center;
     justify-content: center;
     flex-wrap: wrap;
-
+    gap: 1em
 }
 
 .prd-author,
@@ -114,8 +116,9 @@ button:hover {
 .btn-edit,
 .btn-delete,
 .btn-like,
-.btn-comment {
-    padding: 0.2em 0.8em;
+.btn-comment ,
+.btn.btn-outline-primary {
+
     display: flex;
     gap: 0.5em;
     text-align: center;
@@ -169,8 +172,14 @@ button:hover {
     max-width: 80%;
     margin: 20px auto;
 }
-.btn-back{
+
+.btn-back {
     text-align: center;
     padding-top: 10px;
     padding-bottom: 20px;
+}
+
+.my-5 {
+    margin-top: 0.5rem !important;
+    margin-bottom: 0.5rem !important;
 }
